db.tf
resource "aws_db_subnet_group" "database_group" {
  name       = "main-db-subnet-group"
  subnet_ids = [aws_subnet.private1-db.id, aws_subnet.private2-db.id]

  tags = { Name = "My DB Subnet Group" }
}
resource "random_password" "db_password" {
  length           = 16
  special          = true
  override_special = "!#$%&*()-_=+[]{}<>:?"
}
resource "aws_db_instance" "main_db" {
  allocated_storage      = 20
  db_name                = "mydb"
  engine                 = "mysql"
  engine_version         = "8.0"
  instance_class         = "db.t3.micro"
  username               = "admin"
  password               = random_password.db_password.result 
  
  db_subnet_group_name   = aws_db_subnet_group.database_group.name
  vpc_security_group_ids = [aws_security_group.db_sg.id]
  
  multi_az               = true 
  skip_final_snapshot    = true  
  publicly_accessible    = false
}
resource "aws_secretsmanager_secret" "db_secret" {
  name        = "web-app-db-secret"
  description = "Database credentials generated by Terraform"
}
resource "aws_secretsmanager_secret_version" "db_secret_val" {
  secret_id     = aws_secretsmanager_secret.db_secret.id
  secret_string = jsonencode({
    username = "admin"
    password = random_password.db_password.result
    host     = aws_db_instance.main_db.address
    port     = 3306
    db_name  = "mydb"
    })
}
